@@ -2,6 +2,7 @@
 * Added Taproot support
 * Wallet: New config/command line switch "minsig", to enforce ECDSA creation of signatures without the extra byte
 * Client: Make sure outgoing "inv" message never carries more than 50000 records
+* Client: Force sending invs immediatelly, if a new inv is MSG_BLOCK type (for faster blocks propagation)
 
 1.9.9 - 2021-05-21
  * Client: Do not drop Authorized peers
